JVM FatJar and Proguard fixes (#1942)